--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "data/cv"]
 	path = data/cv
-	url = https://git.overleaf.com/13862334zhmhmybrbzqz
+	url = https://github.com/zhoupc/cv.git 
