delete the redundant files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /data/cv
+.bundle 
+.sass-cache 
+Gemfile.lock 
+_site 
+*.gem
+~                                                                               
+~                                                                               
+~                                                                               
+~                                                                               
