--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Pengcheng Zhou
 email: zhoupc2018@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
   computational neuroscience and machine learning. 
-markdown: markdown-it 
+markdown: kramdown 
 
 # social links
 twitter_username: zhoupc2018
